2004-05-15  Krzysztof Burghardt

	* configure.ac: bumped to 1.2.1
	* src/esekeyd.c, src/keytest, src/learnkeys: added
	    option to override autodetection of input device
	* src/Makefile.am: moved clean: to clean-local:
	* src/input.c: check_handlers(), find_input_dev():
	    memory leaks fixed
	* src/mkparser.c: some improvements

2004-01-24  Krzysztof Burghardt

	* src/esekeyd.c: minor bugfix

2004-01-11  Krzysztof Burghardt

	* src/esekeyd.c: added support for config file
	* src/esekeyd.c: removed function check_handlers()
	    and find_input_dev()
	* src/input.c: moved two common functions
	* src/mkparser.c: added
	* src/keytest.c: added
	* src/learnkeys.c: added
	* src/parser.c: dynamicaly generated from <linux/input.h>
	* README: updated

2004-01-10  Krzysztof Burghardt

	* configure.ac: bumped to 1.2.0
	* src/esekeyd.c: minor bugfix