@@ -1,0 +1,2 @@
+man_MANS = esekeyd.1 keytest.1 learnkeys.1
+EXTRA_DIST = $(man_MANS)
